--- a/shoestyle.css
+++ b/shoestyle.css
@@ -199,7 +199,7 @@ html {
   margin: 0px 70px;
   }
   
-  footer p:hover {
+  footer:hover {
   transition: 1s ease;
   transform: scale(1.05);
   }
